# ai-dlc-summercamp

./: .gitignore  AI-DLC.md  LICENCE.md
aidlc-docs/: aidlc-state.md  audit.md
aidlc-docs/construction/: shared-infrastructure.md
aidlc-docs/construction/build-and-test/: DEPLOYMENT-RUNBOOK.md  build-and-test-summary.md  build-instructions.md  integration-test-instructions.md  performance-test-instructions.md  (+1 more)
infra/: app.py  cdk.json  requirements.txt
infra/stacks/: agents_stack.py  api_stack.py  auth_stack.py  config.py  config_stack.py  data_stack.py  events_stack.py  kb_stack.py  observability_stack.py  web_stack.py
libs/clairo_shared/: pyproject.toml
libs/clairo_shared/clairo_shared/: __init__.py  audit.py  auth.py  config.py  errors.py  models.py  result.py  rules.py  util.py
libs/clairo_shared/clairo_shared/repositories/: __init__.py  claim_repository.py  document_store.py
scripts/: build_lambdas.sh  seed_data.sh
seed/: sample-claim.txt  sample-gdpr-rules.md  sample-health-policy.md
services/adjudication/: __init__.py  handler.py  kb_client.py  reasoner.py  types.py
services/compliance/: __init__.py  explanation.py  gdpr_validator.py  handler.py
services/feedback/: __init__.py  handler.py  requirements.txt
services/intake/: __init__.py  extraction.py  handler.py  llm_extractor.py  normalizer.py  ocr_adapter.py  text_parser.py
services/orchestration_api/: __init__.py  api_handler.py  orchestrator.py  review.py  routing.py
web/: .env.example  next.config.js  package-lock.json  package.json  tsconfig.json
web/src/: types.ts
(+120 files in other folders)
