[project]
name = "clairo-shared"
version = "0.1.0"
description = "CLAIRO shared library: models, repositories, audit, config, and auth helpers"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.34.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["clairo_shared*"]
